# rsspolymlp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  sorting_str.py
.github/workflows/: publish-to-test-pypi.yml
docs/: api_rss.md  api_rsspolymlp.md  rss.md  rsspolymlp.md  rsspolymlp_devkit.md  rsspolymlp_utils.md
examples/rss/potential/: AlCu_polymlp.lammps
examples/rss/script/: command  readme.md  rss_mlp.py  rss_summary.py  test_rss_mlp.py
examples/struct_matcher/: run_element.py  run_element2.py  run_element3.py  run_multi.py  run_test.py  run_test2.py  run_test3.py
examples/struct_matcher/poscar_element/: example_1  example_2  swap_1  swap_2
examples/struct_matcher/poscars/: invert_1  invert_2
examples/struct_matcher/poscars2/: POSCAR_10  POSCAR_100  POSCAR_1000  POSCAR_101  POSCAR_102  POSCAR_103  POSCAR_104  POSCAR_105  POSCAR_106  POSCAR_107  POSCAR_108  POSCAR_109  POSCAR_11  POSCAR_110  POSCAR_111  POSCAR_112  POSCAR_113  POSCAR_114  POSCAR_115  POSCAR_116  POSCAR_117  POSCAR_118  POSCAR_119  POSCAR_12  POSCAR_120  POSCAR_121  POSCAR_122  POSCAR_123  POSCAR_125  POSCAR_126  POSCAR_127  POSCAR_128  POSCAR_129  POSCAR_13  POSCAR_130  POSCAR_131  POSCAR_132  POSCAR_133  POSCAR_135  POSCAR_136  (+949 more)
src/rss_polymlp/: __init__.py  go_parallel.py  initial_str.py  readfile.py  run_rss_parallel.py  sorting_str.py  variable.py
src/rsspolymlp/: gen_rand_struct.py  initial_str.py  parse_arg.py  readfile.py  rss_mlp.py  run_rss_parallel.py  sort_struct.py  sorting_str.py  utils.py
tests/: test_cli_help.py
(+7862 files in other folders)
