[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsspolymlp"
version = "0.0.1"
description = "A framework for random structure search using polynomial MLPs"
license = {text = "MIT"}
authors = [
    {name = "Hayato Wakai", email = "wakai@cms.mtl.kyoto-u.ac.jp"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "setuptools",
    "pyyaml",
    "pybind11",
    "joblib",
    "pypolymlp",
    "spglib",
    "symfc",
]

[project.optional-dependencies]
pymatgen = ["pymatgen"]
matplotlib = ["matplotlib"]
seaborn = ["seaborn"]
tools = ["pymatgen", "matplotlib", "seaborn"]

[project.urls]
homepage = "https://github.com/hytwakai/rsspolymlp"

[project.scripts]
gen-rand-struct = "rsspolymlp.rss.random_struct:run"
rss-single-srun = "rsspolymlp.rss.run_rss_parallel:run_single_srun"
rss-parallel = "rsspolymlp.rss.run_rss_parallel:run"
sort-struct = "rsspolymlp.rss.struct_sort:run"
sort-struct-all = "rsspolymlp.analysis.struct_sort_all:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rss_polymlp = ["py.typed"]